# minify-selectors

./: .editorconfig  .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  package-lock.json  package.json
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/encode_selector/: Cargo.toml
crates/encode_selector/benches/: encode_selector.rs
crates/encode_selector/src/: lib.rs
crates/encode_selector/tests/: tests.rs
crates/minify_selectors/: Cargo.toml
crates/minify_selectors/benches/: minify_selectors.rs
crates/minify_selectors/src/: main.rs
crates/minify_selectors_utils/: Cargo.toml
crates/minify_selectors_utils/src/: lib.rs
crates/parse_selectors/: Cargo.toml  info.md
crates/parse_selectors/benches/: parse_selectors.rs
crates/parse_selectors/benches/files/: index.css  index.html  index.js
crates/parse_selectors/src/: html_attribute_whitelist.rs  lib.rs  regexes.rs
crates/parse_selectors/src/markup/: html_attributes.rs  mod.rs  named_char_refs.rs  regexes.rs  whitelist.rs
crates/parse_selectors/src/regexes/: mod.rs
crates/parse_selectors/src/script/: mod.rs  regexes.rs
crates/parse_selectors/src/style/: mod.rs  regexes.rs
crates/parse_selectors/tests/: tests.rs
crates/parse_selectors/tests/css/at-rules/: output-sorted.css  output.css  source.css
crates/parse_selectors/tests/css/attribute-selectors/: output-sorted.css  output.css  source.css
crates/parse_selectors/tests/css/comments/: output-sorted.css  output.css
crates/parse_selectors/tests/css/functions/: output-sorted.css  output.css  source.css
crates/parse_selectors/tests/css/general-selectors/: output-sorted.css  output.css  source.css
crates/parse_selectors/tests/css/nesting/: output.css  source.css
crates/parse_selectors/tests/css/pseudo-classes/: output-sorted.css  output.css  source.css
crates/parse_selectors/tests/css/pseudo-elements/: output.css  source.css
crates/parse_selectors/tests/html/anchor-links/: output-sorted.html  output.html  source.html
crates/parse_selectors/tests/html/attributes/: output-sorted.html  output.html  source.html
crates/parse_selectors/tests/html/body-only/: output-sorted.html  output.html  source.html
crates/parse_selectors/tests/html/edge-cases/: output.html  source.html
crates/parse_selectors/tests/html/escaped-chars/: output-sorted.html  output.html  source.html
crates/parse_selectors/tests/html/placeholders/: output.html  source.html
crates/parse_selectors/tests/html/prefixed-selectors/: output-sorted.html  output.html  source.html
crates/parse_selectors/tests/js/children/: output-sorted.js  output.js  source.js
crates/parse_selectors/tests/js/class-list/: output-sorted.js  output.js  source.js
crates/parse_selectors/tests/js/class-list-add/: output-sorted.js  output.js  source.js
crates/parse_selectors/tests/js/class-list-contains/: output-sorted.js  output.js  source.js
crates/parse_selectors/tests/js/class-list-item/: output.js  source.js
crates/parse_selectors/tests/js/class-list-remove/: output-sorted.js  output.js  source.js
crates/parse_selectors/tests/js/class-list-replace/: output-sorted.js  output.js  source.js
crates/parse_selectors/tests/js/class-list-toggle/: output.js  source.js
crates/parse_selectors/tests/js/class-list-value/: output-sorted.js  output.js  source.js
crates/parse_selectors/tests/js/class-name/: output-sorted.js  output.js  source.js
crates/parse_selectors/tests/js/closest/: output.js  source.js
crates/parse_selectors/tests/js/get-element-by-id/: output.js  source.js
crates/parse_selectors/tests/js/get-elements-by-class-name/: output-sorted.js  output.js  source.js
crates/parse_selectors/tests/js/history-push-state/: output-sorted.js  output.js  source.js
crates/parse_selectors/tests/js/history-replace-state/: output-sorted.js  output.js  source.js
crates/parse_selectors/tests/js/id/: output-sorted.js  output.js  source.js
crates/parse_selectors/tests/js/inner-html/: output-sorted.js  output.js  source.js
crates/parse_selectors/tests/js/insert-adjacent-html/: output.js  source.js
crates/parse_selectors/tests/js/location/: output-sorted.js  output.js  source.js
crates/parse_selectors/tests/js/matches/: output-sorted.js  output.js  source.js
crates/parse_selectors/tests/js/outer-html/: output.js  source.js
crates/parse_selectors/tests/js/query-selector/: output-sorted.js  output.js  source.js
crates/parse_selectors/tests/js/query-selector-all/: output-sorted.js  output.js  source.js
crates/parse_selectors/tests/js/set-attribute/: output-sorted.js  output.js  source.js
crates/parse_selectors/tests/js/window-location-assign/: output-sorted.js  output.js  source.js
crates/parse_selectors/tests/js/window-location-replace/: output-sorted.js  output.js  source.js
crates/parse_selectors/tests/js/window-open/: output-sorted.js  output.js  source.js
examples/: index.html  main.css  output.js
examples/demo1/: demo1.css
examples/src/: source.html
npm/: README.md  deploy.sh  install.js  main.js  package.binaries.json  package.json  package.main.json  platforms.json
scripts/: npm-platform-packages-pre-deploy.sh
src/: main.rs
