[workspace]
members = [
	"crates/encode_selector",
	"crates/minify_selectors",
	"crates/parse_selectors",
]
resolver = "2"


[profile.release]
codegen-units = 1
lto = true
strip = true


[patch.crates-io]
onig_sys = { git = "https://github.com/rust-onig/rust-onig", revision = "fa90c0e97e90a056af89f183b23cd417b59ee6a2" }
