[package]
authors = ["Adam Gian <contact@adamgian.com>"]
description = "Encode an integer index into a selector valid radix using the passed in alphabet."
edition = "2021"
homepage = "https://github.com/adamgian/minify-selectors#readme"
keywords = [ "radix" ]
license = "Apache-2.0"
name = "encode_selector"
repository = "https://github.com/adamgian/minify-selectors.git"
version = "0.4.2"




[dependencies]
lazy_static = "1.4.0"
onig = "6.4.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
harness = false
name = "encode_selector"
