[package]
authors = ["Adam Gian <contact@adamgian.com>"]
categories = [ "command-line-utilities", "development-tools::build-utils", "web-programming" ]
description = "Post-processor that minifies classes and IDs in CSS, HTML, Javascript and SVG files."
edition = "2021"
homepage = "https://github.com/adamgian/minify-selectors#readme"
keywords = [ "CSS", "selectors", "minifier", "CLI" ]
license = "Apache-2.0"
name = "minify_selectors"
repository = "https://github.com/adamgian/minify-selectors.git"
version = "2.0.0"


[[bin]]
name = "minify-selectors"
path = "./src/main.rs"


[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
rayon = "1.5.3"
walkdir = "2.3.2"

minify_selectors_utils = { version = "2.0.0", path = "../minify_selectors_utils" }
parse_selectors = { version = "1.8.0", path = "../parse_selectors" }
encode_selector = { version = "0.4.1", path = "../encode_selector" }
