[package]
authors = ["Adam Gian <contact@adamgian.com>"]
description = "Utilities for minify-selectors"
edition = "2021"
homepage = "https://github.com/adamgian/minify-selectors#readme"
keywords = []
license = "Apache-2.0"
name = "minify_selectors_utils"
repository = "https://github.com/adamgian/minify-selectors.git"
version = "2.4.1"




[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
indexmap = { version = "1.9.2" }

encode_selector = { version = "0.4.1", path = "../encode_selector" }
