[package]
authors = ["Adam Gian <contact@adamgian.com>"]
description = "Utilities for minify-selectors"
edition = "2021"
homepage = "https://github.com/adamgian/minify-selectors#readme"
keywords = []
license = "Apache-2.0"
name = "minify_selectors_utils"
repository = "https://github.com/adamgian/minify-selectors.git"
version = "2.6.0"




[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
indexmap = "1.9.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"

encode_selector = { version = "0.4.2", path = "../encode_selector" }
