[package]
authors = ["Adam Gian <contact@adamgian.com>"]
description = "minify-selectors' API"
edition = "2021"
homepage = "https://github.com/adamgian/minify-selectors/crates/parse_selectors/info.md"
keywords = [ "CSS", "selectors", "minifier", "API" ]
license = "Apache-2.0"
name = "parse_selectors"
repository = "https://github.com/adamgian/minify-selectors.git"
version = "2.1.2"


[dependencies]
lazy_static = "1.4.0"
once_cell = "1.17.0"
onig = "6.4.0"

minify_selectors_utils = { version = "2.3.3", path = "../minify_selectors_utils" }
encode_selector = { version = "0.4.1", path = "../encode_selector" }


[dev-dependencies]
criterion = "0.4.0"

[[bench]]
harness = false
name = "parse_selectors"
